--- a/css/content.css
+++ b/css/content.css
@@ -76,6 +76,7 @@ div.preview {
 	width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
+	overflow: hidden;
 }
 
 div.preview.expertise {
@@ -229,7 +230,7 @@ div.text p {
 	}
 
 	div.prod_types > ul {
-		margin-top: 40px;
+		padding-top: 40px;
 	}
 
 	div.prod_types > ul > li:nth-child(odd) {
@@ -299,7 +300,7 @@ div.text p {
 	}
 
 	div.prod_types > ul {
-		margin-top: 20px;
+		padding-top: 20px;
 	}
 
 	div.prod_types > ul > li:nth-child(odd) {
