--- a/css/base.css
+++ b/css/base.css
@@ -25,14 +25,12 @@ article h1,
 article h2,
 article h3,
 article > div.brief blockquote {
-	/* padding-top : 20px; */
 	padding-bottom : 20px;
 	}
 
 article > div.brief blockquote {
 	padding-top : 20px;
 }
-
 
 article h1 {
 	position : relative;
@@ -88,6 +86,26 @@ article > div.brief ul > li::before {
 	border-radius : 50%;
 	}
 
+	div.content > div.text_photo,
+	div.content > div.photo_text {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	div.text_photo > div > div,
+	div.photo_text > div > div {
+		display: block;
+		width: 100%;
+		position: relative;
+	}
+
+	div.preview {
+		width: 100%;
+		background-size: cover;
+		background-repeat: no-repeat;
+		overflow: hidden;
+	}
+
 @media (min-width: 1401px) {
 	article > div.content,
 	article > div.brief {
@@ -117,6 +135,38 @@ article > div.brief ul > li::before {
 	article > div.content h3 {
 		font : normal 32px/36px "Light", Arial, sans-serif;
 		}
+}
+
+@media (min-width: 1040px) {
+
+	div.text_photo,
+	div.photo_text {
+		padding-top: 20px;
+		padding-bottom: 20px;
+	}
+
+	div.text_photo > div:last-child {
+		width: 50%;
+		margin-left: 20px;
+		}
+
+	div.text_photo > div:first-child {
+		width: calc(50% - 20px);
+	}
+
+	div.photo_text > div:first-child {
+		margin-right: 20px;
+		width: 50%;
+	}
+
+	div.photo_text > div:last-child {
+		width: calc(50% - 20px);
+	}
+
+	div.photo_text > div > p,
+	div.text_photo > div > p {
+		margin-top: 0 !important;
+	}
 }
 
 @media (min-width: 1041px) and (max-width: 1400px)  {
@@ -179,6 +229,36 @@ article > div.brief ul > li::before {
 	article > div.content h3 {
 		font : normal 28px/32px "Light", Arial, sans-serif;
 		}
+
+		div.text_photo,
+		div.photo_text {
+			padding-top: 20px;
+			padding-bottom: 20px;
+		}
+
+		div.text_photo > div:last-child {
+			width: 50%;
+			margin-left: 20px;
+			margin-bottom: 20px;
+			}
+
+		div.text_photo > div:first-child {
+			width: calc(50% - 20px);
+		}
+
+		div.photo_text > div:first-child {
+			margin-right: 20px;
+			width: 50%;
+		}
+
+		div.photo_text > div:last-child {
+			width: calc(50% - 20px);
+		}
+
+		div.photo_text > div > p,
+		div.text_photo > div > p {
+			margin-top: 0 !important;
+		}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
@@ -210,6 +290,29 @@ article > div.brief ul > li::before {
 	article > div.content h3 {
 		font : normal 26px/30px "Light", Arial, sans-serif;
 		}
+
+		div.photo_text > div,
+		div.text_photo > div {
+			width: 100%;
+		}
+
+		div.photo_text > div > p,
+		div.text_photo > div > p {
+			margin-bottom: 0 !important;
+		}
+
+		div.text_photo > div:last-child {
+			order: 0;
+		}
+
+		div.text_photo > div:first-child {
+			order: 1;
+		}
+
+		div.text_photo > div:first-child,
+		div.photo_text > div:last-child {
+			padding-top: 20px;
+		}
 }
 
 @media (max-width: 480px) {
@@ -240,5 +343,28 @@ article > div.brief ul > li::before {
 
 	article > div.content h3 {
 		font : normal 24px/28px "Light", Arial, sans-serif;
+		}
+
+		div.photo_text > div,
+		div.text_photo > div {
+			width: 100%;
+		}
+
+		div.photo_text > div > p,
+		div.text_photo > div > p {
+			margin-bottom: 0 !important;
+		}
+
+		div.text_photo > div:last-child {
+			order: 0;
+		}
+
+		div.text_photo > div:first-child {
+			order: 1;
+		}
+
+		div.text_photo > div:first-child,
+		div.photo_text > div:last-child {
+			padding-top: 20px;
 		}
 }
