--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
 footer {
-	position: relative;
-	display: table-row !important;
+	position: absolute;
+	bottom: 0;
 	width: 100%;
-	height: 1px;
 }
 
 .footer_wrapper {
@@ -71,7 +70,6 @@ div.down_level {
 	background-size: cover;
 	background-repeat: no-repeat;
 	padding-top: 50px;
-	padding-bottom: 350px;
 	background: url("../img/scentstrip.jpg") no-repeat 50% 0;
 }
 
