--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body {
 
 div.container {
 	position: relative;
-	display: table !important;
-	left: 0;
+	/* display: table !important;
+	left: 0; */
 	width: 100%;
 	min-height: 100%;
 	margin: 0 auto;
@@ -18,6 +18,13 @@ div.container {
 
 div.container > span {
 	display: none;
+}
+
+article {
+	position: relative;
+	width: 100%;
+	color: rgba(51, 51, 51, 1);
+	margin-top: 70px;
 }
 
 a {
