--- a/css/base.css
+++ b/css/base.css
@@ -21,16 +21,15 @@ article > div.brief blockquote {
 	text-align : center;
 	}
 
-article h1,
-article h2,
-article h3,
+article > div.content h1,
+article > div.content h2,
+article > div.content h3,
+article > div.brief h1,
+article > div.brief h2,
+article > div.brief h3,
 article > div.brief blockquote {
 	padding-bottom : 20px;
 	}
-
-article > div.brief blockquote {
-	padding-top : 20px;
-}
 
 article h1 {
 	position : relative;
@@ -50,14 +49,10 @@ article > div.brief blockquote {
 	max-width : 960px;
 	}
 
-article h2 {
-	}
-
 article > div.content h3 {
 	text-transform: uppercase;
 	}
 
-article > div.content p,
 article > div.content ul,
 article > div.brief ul  {
 	margin-bottom : 20px;
@@ -112,15 +107,20 @@ article > div.brief ul > li::before {
 		padding : 30px 60px;
 		}
 
-	article > div.brief blockquote {
-		padding : 30px 0;
-		font : normal 28px/32px "Light", Arial, sans-serif;
+		article > div.brief blockquote,
+		div.preview > div.preview_wrap > div h3 {
+				font : normal 28px/32px "Light", Arial, sans-serif;
 		}
 
-	article > div.brief p,
-	article > div.content p,
+	article > div.brief blockquote {
+		padding-top : 30px;
+	}
+
+	article > div.brief,
+	article > div.content,
 	article > div.content ul,
-	article > div.brief ul  {
+	article > div.brief ul,
+	div.preview > div.preview_wrap  {
 		font: normal 24px/30px "Light", Arial, sans-serif;
 		}
 
@@ -132,7 +132,8 @@ article > div.brief ul > li::before {
 		font: normal 36px/40px "Roboto Condensed", Arial, sans-serif;
 		}
 
-	article > div.content h3 {
+	article > div.content h3,
+	div.prod_types > ul > li > a > span  {
 		font : normal 32px/36px "Light", Arial, sans-serif;
 		}
 }
@@ -175,15 +176,20 @@ article > div.brief ul > li::before {
 		padding : 25px 50px;
 		}
 
-	article > div.brief blockquote {
-		padding : 25px 0;
+	article > div.brief blockquote,
+	div.preview > div.preview_wrap > div h3 {
 		font : normal 26px/30px "Light", Arial, sans-serif;
 		}
 
-	article > div.brief p,
-	article > div.content p,
+		article > div.brief blockquote {
+			padding-top : 25px;
+		}
+
+	article > div.brief,
+	article > div.content,
 	article > div.content ul,
-	article > div.brief ul  {
+	article > div.brief ul,
+	div.preview > div.preview_wrap  {
 		font: normal 22px/28px "Light", Arial, sans-serif;
 		}
 
@@ -195,7 +201,8 @@ article > div.brief ul > li::before {
 		font: normal 34px/38px "Roboto Condensed", Arial, sans-serif;
 		}
 
-	article > div.content h3 {
+	article > div.content h3,
+	div.prod_types > ul > li > a > span {
 		font : normal 30px/34px "Light", Arial, sans-serif;
 		}
 }
@@ -206,15 +213,20 @@ article > div.brief ul > li::before {
 		padding : 20px 40px;
 		}
 
+	div.preview > div.preview_wrap > div h3,
 	article > div.brief blockquote {
-		padding : 20px 0;
 		font : normal 24px/28px "Light", Arial, sans-serif;
 		}
 
-	article > div.brief p,
-	article > div.content p,
+		article > div.brief blockquote {
+			padding-top: 20px;
+		}
+
+	article > div.brief,
+	article > div.content,
 	article > div.content ul,
-	article > div.brief ul  {
+	article > div.brief ul,
+	div.preview > div.preview_wrap  {
 		font: normal 20px/26px "Light", Arial, sans-serif;
 		}
 
@@ -226,7 +238,8 @@ article > div.brief ul > li::before {
 		font: normal 32px/36px "Roboto Condensed", Arial, sans-serif;
 		}
 
-	article > div.content h3 {
+	article > div.content h3,
+	div.prod_types > ul > li > a > span  {
 		font : normal 28px/32px "Light", Arial, sans-serif;
 		}
 
@@ -267,15 +280,20 @@ article > div.brief ul > li::before {
 		padding : 15px 30px;
 		}
 
-	article > div.brief blockquote {
-		padding : 15px 0;
-		font : normal 22px/26px "Light", Arial, sans-serif;
-		}
+		div.preview > div.preview_wrap > div h3,
+		article > div.brief blockquote {
+			font : normal 22px/26px "Light", Arial, sans-serif;
+			}
 
-	article > div.brief p,
-	article > div.content p,
+			article > div.brief blockquote {
+				padding-top : 15px;
+			}
+
+	article > div.brief,
+	article > div.content,
 	article > div.content ul,
-	article > div.brief ul  {
+	article > div.brief ul,
+	div.preview > div.preview_wrap   {
 		font: normal 18px/24px "Light", Arial, sans-serif;
 		}
 
@@ -287,7 +305,8 @@ article > div.brief ul > li::before {
 		font: normal 30px/34px "Roboto Condensed", Arial, sans-serif;
 		}
 
-	article > div.content h3 {
+	article > div.content h3,
+	div.prod_types > ul > li > a > span {
 		font : normal 26px/30px "Light", Arial, sans-serif;
 		}
 
@@ -322,14 +341,19 @@ article > div.brief ul > li::before {
 		}
 
 	article > div.brief blockquote {
-		padding : 10px 0;
-		font : normal 20px/24px "Light", Arial, sans-serif;
-		}
+		padding-top : 10px;
+	}
+
+		div.preview > div.preview_wrap > div h3,
+		article > div.brief blockquote {
+			font : normal 20px/24px "Light", Arial, sans-serif;
+			}
 
 	article > div.brief p,
 	article > div.content p,
 	article > div.content ul,
-	article > div.brief ul  {
+	article > div.brief ul,
+	div.preview > div.preview_wrap   {
 		font: normal 16px/22px "Light", Arial, sans-serif;
 		}
 
@@ -341,7 +365,8 @@ article > div.brief ul > li::before {
 		font: normal 28px/32px "Roboto Condensed", Arial, sans-serif;
 		}
 
-	article > div.content h3 {
+	article > div.content h3,
+	div.prod_types > ul > li > a > span {
 		font : normal 24px/28px "Light", Arial, sans-serif;
 		}
 
