--- a/css/default.css
+++ b/css/default.css
@@ -14,7 +14,7 @@ html, body,
 main, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section,
 dl, dt, dd,
 h1, h2, h3, h4, h5, h6, p,
-pre, form, fieldset, input, textarea, blockquote, ul, th, td,
+pre, form, fieldset, input, textarea, blockquote, th, td,
 img, a img,
 div {
 	margin : 0;
