--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ body {
 div.container {
 	position: relative;
 	width: 100%;
-	min-height: 100%;
+	min-height: 100vh;
 	margin: 0 auto;
-	color: rgb(51, 51, 51);
+	padding-top: 70px;
+	color: rgba(51, 51, 51, 1);
 	transition: all .25s ease;
-	overflow: hidden;
 }
 
 div.container > span {
@@ -22,7 +22,6 @@ article {
 	position: relative;
 	width: 100%;
 	color: rgba(51, 51, 51, 1);
-	margin-top: 70px;
 }
 
 a {
