--- a/css/video.css
+++ b/css/video.css
@@ -17,86 +17,88 @@ div.video > video {
 	z-index: 1;
 }
 
-div.video_cover {
+div.video > div.video_cover {
 	position: relative;
 	max-width: 1170px;
 	height: 100%;
-	margin-left: auto;
-	margin-right: auto;
+	margin: 0 auto;
 	z-index: 2;
 }
 
-div.video_cover > div {
+div.video > div.video_cover > div {
 	position: absolute;
-	padding: 10px 10px 10px 20px;
+	text-align: left;
 	background-color: rgba(255, 255, 255, 0.8);
 }
 
-div.video_cover > div > p {
-	text-align: left;
-}
+@media (min-width: 1401px) {
+	div.video {
+		padding : 0 60px;
+		}
+
+	div.video > div.video_cover > div {
+		min-width : 35%;
+		max-width : 50%;
+		padding : 30px;
+		right : 60px;
+		bottom : 60px;
+		font : normal 24px/30px "Light", Arial, sans-serif;
+		}
+	}
 
 @media (min-width: 1041px) and (max-width: 1400px) {
-	div.video_cover {
-		width: calc(100% - 100px);
-	}
-}
+	div.video {
+		padding : 0 50px;
+		}
 
-@media (min-width: 1041px) {
-	div.video_cover > div {
-		min-width: 35%;
-		max-width: 50%;
-		right: 0;
-		bottom: 60px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 26px/34px "Light", Arial, sans-serif;
-	}
+		div.video > div.video_cover > div {
+		min-width : 35%;
+		max-width : 50%;
+		padding : 25px;
+		right : 0;
+		bottom : 50px;
+		font: normal 22px/28px "Light", Arial, sans-serif;
+		}
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
-	div.video_cover {
-		width: calc(100% - 80px);
-	}
+	div.video {
+		padding : 0 40px;
+		}
 
-	div.video_cover > div {
-		width: 50vmax;
+	div.video > div.video_cover > div {
+		width : 50vmax;
+		padding : 20px;
 		right: 0;
 		bottom: 40px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 20px/26px "Light", Arial, sans-serif;
-	}
+		font: normal 20px/26px "Light", Arial, sans-serif;
+		}
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
-	div.video_cover {
-		width: calc(100% - 60px);
-	}
+	div.video {
+		padding : 0 30px;
+		}
 
-	div.video_cover > div {
+	div.video > div.video_cover > div {
 		width: 83%;
+		padding : 15px;
 		right: 0;
 		bottom: 30px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 16px/25px "Light", Arial, sans-serif;
-	}
+		font: normal 18px/24px "Light", Arial, sans-serif;
+		}
 }
 
 @media (max-width: 480px) {
-	div.video_cover {
-		width: calc(100% - 40px);
-	}
+	div.video {
+		padding : 0 20px;
+		}
 
 	div.video_cover > div {
-		bottom: 60px;
-	}
-
-	div.video_cover > div > p {
-		font : normal 16px/25px "Light", Arial, sans-serif;
+		width : 100%;
+		padding : 10px;
+		bottom: 20px;
+		font: normal 16px/22px "Light", Arial, sans-serif;
+		}
 	}
 }
