--- a/css/base.css
+++ b/css/base.css
@@ -19,7 +19,7 @@ article h1,
 article h2,
 article h3,
 article > div.brief blockquote,
-article > div.content blockquote, {
+article > div.content blockquote {
 	text-align : center;
 	}
 
