--- a/css/footer.css
+++ b/css/footer.css
@@ -52,7 +52,7 @@ ul.contacts > li {
 }
 
 .copyright > p {
-	font : normal 20px/25px "Light", Arial, sans-serif;
+	/* font : normal 20px/25px "Light", Arial, sans-serif; */
 	text-align: center;
 }
 
@@ -66,18 +66,18 @@ footer a:hover {
 	color: rgba(169, 0, 0, 1);
 }
 
-div.down_level {
-	position: relative;
-	width: 100%;
+footer > div > div.down_level {
 	background-size: cover;
 	background-repeat: no-repeat;
-	padding: 50px 0;
-	min-height: 220px;
 	background: url("../img/scentstrip.jpg") no-repeat 50% 0;
-	box-sizing: border-box;
 }
 
 @media (min-width: 1401px) {
+	footer > div > div.down_level {
+		min-height: 240px;
+		padding: 60px 0;
+	}
+
 	.footer_wrapper {
 		padding-top: 30px;
 		padding-bottom: 30px;
@@ -85,18 +85,22 @@ div.down_level {
 }
 
 @media (min-width: 1041px) and (max-width: 1400px) {
+	footer > div > div.down_level {
+		min-height: 220px;
+		padding: 50px 0;
+	}
+
 	.footer_wrapper {
 		padding: 25px 50px;
 	}
 }
 
-@media only screen and (min-width: 1041px) {
-	.copyright > p {
-		font : normal 20px/25px "Light", Arial, sans-serif;
-	}
-}
-
 @media (min-width: 721px) and (max-width: 1041px) {
+	footer > div > div.down_level {
+		min-height: 200px;
+		padding: 40px 0;
+	}
+
 	.footer_wrapper {
 		padding: 20px 40px;
 	}
@@ -107,20 +111,22 @@ div.down_level {
 }
 
 @media (min-width: 481px) and (max-width: 720px) {
+	footer > div > div.down_level {
+		min-height: 180px;
+		padding: 30px 0;
+	}
+
 	.footer_wrapper {
 		padding: 15px 30px;
 	}
 }
 
-@media (min-width: 481px) {
-	ul.contacts, p.contacts {
-		margin-left: 20px;
-		margin-right: 20px;
-		font : normal 21px/33px "Light", Arial, sans-serif;
-	}
-}
-
 @media (max-width: 480px) {
+	footer > div > div.down_level {
+		min-height: 160px;
+		padding: 20px 0;
+	}
+
 	.footer_wrapper {
 		padding: 10px 20px;
 	}
@@ -129,6 +135,20 @@ div.down_level {
 		margin-left: 20px;
 		margin-right: 20px;
 		font : normal 18px/36px "Light", Arial, sans-serif;
+	}
+}
+
+@media only screen and (min-width: 1041px) {
+	.copyright > p {
+		font : normal 20px/25px "Light", Arial, sans-serif;
+	}
+}
+
+@media (min-width: 481px) {
+	ul.contacts, p.contacts {
+		margin-left: 20px;
+		margin-right: 20px;
+		font : normal 21px/33px "Light", Arial, sans-serif;
 	}
 }
 
