--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,19 +2,17 @@
 
 div.gallery {
 	position: relative;
+	max-width: 1170px;
 	margin: 0 auto;
-	overflow: hidden;
-	padding-right: 40px;
-	padding-left: 40px;
 	z-index: 2;
 }
 
 div.gallery > div.swiper {
 	overflow: hidden;
-	width: 100%;
+	margin: 0 auto;
 }
 
-ul.swiper-wrapper {
+div.gallery > div.swiper > ul.swiper-wrapper {
 	display: flex;
 	display: -webkit-box;
 	display: -webkit-flex;
@@ -24,7 +22,7 @@ ul.swiper-wrapper {
 	margin: 0;
 }
 
-ul.swiper-wrapper > li > a {
+div.gallery > div.swiper > ul.swiper-wrapper > li > a {
 	display: block;
 	position: relative;
 	width: inherit;
@@ -32,8 +30,7 @@ ul.swiper-wrapper > li > a {
 	overflow: hidden;
 }
 
-ul.swiper-wrapper > li > a > img {
-	display: block;
+div.gallery > div.swiper > ul.swiper-wrapper > li > a > img {
 	position: absolute;
 	width: inherit;
 	height: auto;
@@ -42,7 +39,7 @@ ul.swiper-wrapper > li > a > img {
 	transform: translate(-50%, -50%);
 }
 
-ul.swiper-wrapper > li > a::before {
+div.gallery > div.swiper > ul.swiper-wrapper > li > a::before {
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -56,7 +53,7 @@ ul.swiper-wrapper > li > a::before {
 
 }
 
-ul.swiper-wrapper > li > a::after {
+div.gallery > div.swiper > ul.swiper-wrapper > li > a::after {
 	content: "+";
 	position: absolute;
 	width: 40px;
@@ -75,15 +72,15 @@ ul.swiper-wrapper > li > a::after {
 	cursor: pointer;
 }
 
-ul.swiper-wrapper > li:hover > a::before {
+div.gallery > div.swiper > ul.swiper-wrapper > li:hover > a::before {
 	background-color: rgba(0, 0, 0, 0.5);
 }
 
-ul.swiper-wrapper > li:hover > a::after {
+div.gallery > div.swiper > ul.swiper-wrapper > li:hover > a::after {
 	transform: scale(1);
 }
 
-div.button {
+/* div.button {
 	position: absolute;
 	width: 40px;
 	height: 40px;
@@ -127,28 +124,42 @@ div.button.next::after {
 
 div.button.next:hover::after {
 	transform: translateX(7px);
-}
+} */
 
 @media(min-width: 1401px) {
 	div.gallery {
-		max-width: 1170px;
+		padding: 0 60px;
+	}
+
+	div.gallery > div.swiper {
+		padding: 0 120px;
 	}
 }
 
 @media (min-width: 1041px) and (max-width: 1400px) {
 	div.gallery {
-		width: calc(100vw - 100px);
+		padding: 0 50px;
+	}
+
+	div.gallery > div.swiper {
+		padding: 0 100px;
 	}
 }
 
 @media (min-width: 721px) and (max-width: 1040px) {
-	div.gallery {
-		width: calc(100vw - 80px);
+	div.gallery > div.swiper {
+		padding: 0 80px;
 	}
 }
 
-@media (max-width: 720px) {
-	div.gallery {
-		width: calc(100vw - 40px);
+@media (min-width: 481px) and (max-width: 720px) {
+	div.gallery > div.swiper {
+		padding: 0 60px;
+	}
+}
+
+@media (max-width: 480px) {
+	div.gallery > div.swiper {
+		padding: 0 40px;
 	}
 }
