--- a/css/product.css
+++ b/css/product.css
@@ -1,15 +1,15 @@
 @charset "UTF-8";
 
-div.preview.product {
+article > div.preview.product {
 	position: relative;
-	padding-top: 50px;
-	padding-bottom: 50px;
 	background-image: url("../img/water.jpg");
+	background-repeat: no-repeat;
 	background-position: 25% 50%;
 	background-size: cover;
+	overflow: hidden;
 }
 
-div.preview.product::after {
+article > div.preview.product::before {
 	content: "";
 	position: absolute;
 	width: 100%;
@@ -18,3 +18,38 @@ div.preview.product::after {
 	left: 0;
 	background-color: rgba(255, 255, 255, 0.6);
 }
+
+@media (min-width: 1401px) {
+	article > div.preview_product {
+		min-height : 240px;
+		padding : 60px 0;
+		}
+	}
+
+@media (min-width: 1041px) and (max-width: 1400px) {
+	article > div.preview_product {
+		min-height : 220px;
+		padding : 50px 0;
+		}
+	}
+
+@media (min-width: 721px) and (max-width: 1040px) {
+	article > div.preview_product {
+		min-height : 200px;
+		padding : 40px 0;
+		}
+	}
+
+@media (min-width: 481px) and (max-width: 720px) {
+	article > div.preview_product {
+		min-height : 180px;
+		padding : 30px 0;
+		}
+	}
+
+@media (max-width: 480px) {
+	article > div.preview_product {
+		min-height : 160px;
+		padding : 20px 0;
+		}
+	}
