--- a/css/product.css
+++ b/css/product.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-article > div.preview.product {
+article > div.preview_product {
 	position: relative;
 	background-image: url("../img/water.jpg");
 	background-repeat: no-repeat;
@@ -9,7 +9,7 @@ article > div.preview.product {
 	overflow: hidden;
 }
 
-article > div.preview.product::before {
+article > div.preview_product::before {
 	content: "";
 	position: absolute;
 	width: 100%;
